data/all_generated_tests/raw_wast_tests/if_IncorrectBranchTargetResolution_1336.wast
;; 7. **Circular `br` Instructions**:    - Create a structure where `if` and `else` blocks within a nested structure contain `br` operations that reference each other in a circular manner.    - Highlight issues in managing label indices through cyclical branch scenarios.    - Ensures that infinite loops or cyclic branch resolutions are handled correctly.

(assert_invalid
  (module
    (func $circular-br 
      (block
        (loop 
          (i32.const 1)
          (if (result i32)
            (then (br 1))
            (else (br 1))
          )
        )
      )
    )
  )
  "circular branch references"
)